"""
    SPDX-FileCopyrightText: 2022 Julian Amann <dev@vertexwahn.de>
    SPDX-License-Identifier: Apache-2.0
"""

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

#-------------------------------------------------------------------------------------
# rules_oidn
#-------------------------------------------------------------------------------------

#local_repository(
#    name = "rules_ispc",
#    path = "../../rules_ispc",
#)

local_repository(
    name = "rules_oidn",
    path = "..",
)

load("@rules_oidn//third_party/oidn:deps.bzl", "oidn_deps")

oidn_deps()

#-------------------------------------------------------------------------------------
# rules_ispc
#-------------------------------------------------------------------------------------

load("@rules_ispc//:fetch_ispc.bzl", "fetch_ispc")

fetch_ispc()

load("@rules_ispc//tools:ispc_toolchain.bzl", "register_ispc_toolchains")

register_ispc_toolchains()

#-------------------------------------------------------------------------------------
# OpenEXR
#-------------------------------------------------------------------------------------

git_repository(
    name = "com_openexr",
    commit = "fc3ba3cf02ea9322674dc91e5594675241a23a44",
    remote = "https://github.com/AcademySoftwareFoundation/openexr/",
)

load("@com_openexr//:bazel/third_party/openexr_deps.bzl", "openexr_deps")

openexr_deps()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#-------------------------------------------------------------------------------------
# Boost
#-------------------------------------------------------------------------------------

http_archive(
    name = "com_github_nelhage_rules_boost",
    sha256 = "bf488e4c472832a303d31ed20ea0ffdd8fa974654969b0c129b7c0ce4273f103",
    strip_prefix = "rules_boost-5729d34dcf595874f32b9f1aa1134db65fe78fda",
    url = "https://github.com/nelhage/rules_boost/archive/5729d34dcf595874f32b9f1aa1134db65fe78fda.tar.gz",
)

load("@com_github_nelhage_rules_boost//:boost/boost.bzl", "boost_deps")

boost_deps()
